Colaboratory を使用して作成しました

--- a/Python/Python_Basic/question/PythonBasic_2_Question.ipynb
+++ b/Python/Python_Basic/question/PythonBasic_2_Question.ipynb
@@ -75,10 +75,10 @@
       ],
       "metadata": {
         "id": "iBFSsrdRC5Zt",
-        "outputId": "0d530a10-ec6d-4e6e-a487-339fb0465247",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0d530a10-ec6d-4e6e-a487-339fb0465247"
       },
       "execution_count": 51,
       "outputs": [
@@ -143,10 +143,10 @@
       ],
       "metadata": {
         "id": "upd76Tv-FrIB",
-        "outputId": "7bece755-637a-4d9b-f241-50180c923a65",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7bece755-637a-4d9b-f241-50180c923a65"
       },
       "execution_count": 52,
       "outputs": [
@@ -217,10 +217,10 @@
       ],
       "metadata": {
         "id": "Q5Ob9uZpGIE3",
-        "outputId": "bc1d6774-3a2d-4e22-e5b3-611af8293ca5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bc1d6774-3a2d-4e22-e5b3-611af8293ca5"
       },
       "execution_count": 69,
       "outputs": [
@@ -297,10 +297,10 @@
       ],
       "metadata": {
         "id": "hCFNQ7mWG99u",
-        "outputId": "fe67e1cf-b9bb-4a39-9445-cca4803e20f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fe67e1cf-b9bb-4a39-9445-cca4803e20f6"
       },
       "execution_count": 71,
       "outputs": [
@@ -358,38 +358,47 @@
         "  print(\"*\",end=\"\")\n",
         "def p2():\n",
         "  print(\" \",end=\"\")\n",
-        "n = 5\n",
+        "n = 4\n",
         "m=3*n+1\n",
         "if(n>1):\n",
         "  for i1 in range(1,n+1,1):\n",
-        "    for i2 in range(1,n-i1+1,1):\n",
-        "      p2()\n",
-        "    for i2 in range(0,2*i1-1,1):\n",
-        "      p1()\n",
-        "    for i2 in range(1,n-i1+1,1):\n",
-        "      p2()\n",
-        "    for i2 in range(0,2*i1-1,1):\n",
-        "      p1()\n",
-        "    print()"
+        "    if(i1<n):\n",
+        "      for i2 in range(1,n-i1+1,1):\n",
+        "        p2()\n",
+        "      for i2 in range(0,2*i1-1,1):\n",
+        "        p1()\n",
+        "      for i2 in range(1,2*n-1-2*i1,1):\n",
+        "        p2()\n",
+        "      for i2 in range(0,2*i1-1,1):\n",
+        "        p1()\n",
+        "    elif(i1==n):\n",
+        "      for i2 in range(0,4*n-4,1):\n",
+        "        p2()\n",
+        "    else:\n",
+        "      for i2 in range(0,i1,1):\n",
+        "        p2()\n",
+        "      for i2 in range(0,m-2*i1-2,1):\n",
+        "        p1()\n",
+        "\n",
+        "    print(\"\")"
       ],
       "metadata": {
         "id": "1pDkfJpUHd93",
-        "outputId": "e31e7758-3b86-492b-ca8a-69b0b383efeb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5865d569-cf9e-40f3-f40b-3811c8e4ed90"
       },
-      "execution_count": 70,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "    *    *\n",
-            "   ***   ***\n",
-            "  *****  *****\n",
-            " ******* *******\n",
-            "******************\n"
+            "   *    *\n",
+            "  ***  ***\n",
+            " **********\n",
+            "            \n"
           ]
         }
       ]
@@ -440,19 +449,29 @@
         "      p2()\n",
         "    for i2 in range(0,2*i1-1,1):\n",
         "      p1()\n",
-        "    print()\n",
-        "  for i1 in range(1,n,1):\n",
-        "    for i2 in range(0,i1,1):\n",
-        "      p2()\n",
-        "    for i2 in range(0,m-2*i1-2,1):\n",
-        "      p1()\n",
         "    print()"
       ],
       "metadata": {
-        "id": "XZOK5ulbH-tu"
+        "id": "XZOK5ulbH-tu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "80fb02e1-fedb-47ff-c712-a50af7a58925"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    *\n",
+            "   ***\n",
+            "  *****\n",
+            " *******\n",
+            "*********\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
