--- a/Python/Python_Basic/question/PythonBasic_2_Question.ipynb
+++ b/Python/Python_Basic/question/PythonBasic_2_Question.ipynb
@@ -64,10 +64,14 @@
     {
       "cell_type": "code",
       "source": [
-        "m1=5\n",
+        "def p1():\n",
+        "  print(\"*\",end=\"\")\n",
+        "def p2():\n",
+        "  print(\" \",end=\"\")\n",
+        "m1=4\n",
         "if(m1>1):\n",
-        "  for i1 in range(0,m1,1):\n",
-        "    for i2 in range(0,4-i1,1):\n",
+        "  for i1 in range(1,m1+1,1):\n",
+        "    for i2 in range(0,m1-i1,1):\n",
         "      p2()\n",
         "    for i2 in range(0,2*i1-1,1):\n",
         "      p1()\n",
@@ -78,15 +82,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0d530a10-ec6d-4e6e-a487-339fb0465247"
+        "outputId": "f1a29433-a28f-48aa-be6e-57cc8e2d1eca"
       },
-      "execution_count": 51,
+      "execution_count": 132,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "    \n",
             "   *\n",
             "  ***\n",
             " *****\n",
@@ -130,12 +133,10 @@
         "  print(\"*\",end=\"\")\n",
         "def p2():\n",
         "  print(\" \",end=\"\")\n",
-        "flag = input(\"n=\") \n",
-        "n = int(flag)\n",
-        "print(flag)\n",
-        "if(n>1):\n",
-        "  for i1 in range(1,n+1,1):\n",
-        "    for i2 in range(1,n-i1+1,1):\n",
+        "m1=int(input(\"n=\"))\n",
+        "if(m1>1):\n",
+        "  for i1 in range(1,m1+1,1):\n",
+        "    for i2 in range(0,m1-i1,1):\n",
         "      p2()\n",
         "    for i2 in range(0,2*i1-1,1):\n",
         "      p1()\n",
@@ -146,16 +147,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7bece755-637a-4d9b-f241-50180c923a65"
+        "outputId": "2ac28d09-2e16-4aa7-a763-4e361f43fe5f"
       },
-      "execution_count": 52,
+      "execution_count": 135,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "n=5\n",
-            "5\n",
             "    *\n",
             "   ***\n",
             "  *****\n",
@@ -199,44 +199,41 @@
         "  print(\"*\",end=\"\")\n",
         "def p2():\n",
         "  print(\" \",end=\"\")\n",
-        "n = 5\n",
-        "m=2*n+1\n",
-        "if(n>1):\n",
-        "  for i1 in range(1,n+1,1):\n",
-        "    for i2 in range(1,n-i1+1,1):\n",
-        "      p2()\n",
-        "    for i2 in range(0,2*i1-1,1):\n",
-        "      p1()\n",
-        "    print()\n",
-        "  for i1 in range(1,n,1):\n",
-        "    for i2 in range(0,i1,1):\n",
-        "      p2()\n",
-        "    for i2 in range(0,m-2*i1-2,1):\n",
-        "      p1()\n",
-        "    print()\n"
+        "m1=4\n",
+        "if(m1>1):\n",
+        "  for i1 in range(1,2*m1,1):\n",
+        "    if(m1>=i1):\n",
+        "      for i2 in range(0,m1-i1,1):\n",
+        "        p2()\n",
+        "      for i2 in range(0,2*i1-1,1):\n",
+        "        p1()\n",
+        "    elif(m1<i1):\n",
+        "      for i2 in range(0,i1-m1,1):\n",
+        "        p2()\n",
+        "      for i2 in range(0,2*m1-1-2*(i1-m1),1):\n",
+        "        p1()      \n",
+        "    print()"
       ],
       "metadata": {
         "id": "Q5Ob9uZpGIE3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bc1d6774-3a2d-4e22-e5b3-611af8293ca5"
+        "outputId": "df96a5aa-c419-4e1b-dd9a-d343eca9dad0"
       },
-      "execution_count": 69,
+      "execution_count": 151,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "    *\n",
-            "   ***\n",
-            "  *****\n",
-            " *******\n",
-            "*********\n",
-            " *******\n",
-            "  *****\n",
-            "   ***\n",
-            "    *\n"
+            "+++*\n",
+            "++***\n",
+            "+*****\n",
+            "*******\n",
+            "+*****\n",
+            "++***\n",
+            "+++*\n"
           ]
         }
       ]
@@ -277,39 +274,35 @@
         "  print(\"*\",end=\"\")\n",
         "def p2():\n",
         "  print(\" \",end=\"\")\n",
-        "flag = input(\"n=\") \n",
-        "n = int(flag)\n",
-        "m=2*n+1\n",
-        "print(flag)\n",
-        "if(n>1):\n",
-        "  for i1 in range(1,n+1,1):\n",
-        "    for i2 in range(1,n-i1+1,1):\n",
-        "      p2()\n",
-        "    for i2 in range(0,2*i1-1,1):\n",
-        "      p1()\n",
-        "    print()\n",
-        "  for i1 in range(1,n,1):\n",
-        "    for i2 in range(0,i1,1):\n",
-        "      p2()\n",
-        "    for i2 in range(0,m-2*i1-2,1):\n",
-        "      p1()\n",
-        "    print()\n"
+        "m1=int(input(\"n=\"))\n",
+        "if(m1>1):\n",
+        "  for i1 in range(1,2*m1,1):\n",
+        "    if(m1>=i1):\n",
+        "      for i2 in range(0,m1-i1,1):\n",
+        "        p2()\n",
+        "      for i2 in range(0,2*i1-1,1):\n",
+        "        p1()\n",
+        "    elif(m1<i1):\n",
+        "      for i2 in range(0,i1-m1,1):\n",
+        "        p2()\n",
+        "      for i2 in range(0,2*m1-1-2*(i1-m1),1):\n",
+        "        p1()      \n",
+        "    print()"
       ],
       "metadata": {
         "id": "hCFNQ7mWG99u",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fe67e1cf-b9bb-4a39-9445-cca4803e20f6"
+        "outputId": "ff9911c2-8dcf-42f2-dbe6-5707fa27f2c2"
       },
-      "execution_count": 71,
+      "execution_count": 153,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "n=5\n",
-            "5\n",
             "    *\n",
             "   ***\n",
             "  *****\n",
@@ -357,23 +350,22 @@
         "def p1():\n",
         "  print(\"*\",end=\"\")\n",
         "def p2():\n",
-        "  print(\" \",end=\"\")\n",
-        "n = 4\n",
-        "m=3*n+1\n",
+        "  print(\"+\",end=\"\")\n",
+        "n = int(input(\"n=\"))\n",
         "if(n>1):\n",
-        "  for i1 in range(1,n+1,1):\n",
+        "  for i1 in range(1,2*n,1):\n",
         "    if(i1<n):\n",
-        "      for i2 in range(1,n-i1+1,1):\n",
+        "      for i2 in range(0,n-i1,1):\n",
         "        p2()\n",
         "      for i2 in range(0,2*i1-1,1):\n",
         "        p1()\n",
-        "      for i2 in range(1,2*n-1-2*i1,1):\n",
+        "      for i2 in range(0,2*n-1-2*i1,1):\n",
         "        p2()\n",
         "      for i2 in range(0,2*i1-1,1):\n",
         "        p1()\n",
-        "    elif(i1==n):\n",
+        "    elif((i1+1)==n):\n",
         "      for i2 in range(0,4*n-4,1):\n",
-        "        p2()\n",
+        "        p1()\n",
         "    else:\n",
         "      for i2 in range(0,i1,1):\n",
         "        p2()\n",
@@ -387,18 +379,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5865d569-cf9e-40f3-f40b-3811c8e4ed90"
+        "outputId": "ea9e6287-6a62-44f6-c461-8ca98ab0a732"
       },
-      "execution_count": 88,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   *    *\n",
-            "  ***  ***\n",
-            " **********\n",
-            "            \n"
+            "n=3\n",
+            "++*+++*\n",
+            "+***+***\n",
+            "+++*****\n",
+            "++++***\n",
+            "+++++*\n"
           ]
         }
       ]
